2000-11-24  Timothy Jenness  <timj@jach.hawaii.edu>

	* README: Update to include information on read-only widget

	* Makefile.PL: Version now written into file since there are now 2 .pm
	files. 

	* t/require.t: Use Test module and add ROTextANSIColor

	* t/rotext.t: Add

	* ROTextANSIColor.pm: Add

2000-05-02  Tim Jenness  <timj@jach.hawaii.edu>

	* TextANSIColor.pm: Update version number to 0.11 

	* README: Update for V0.11
 	
2000-05-01  Tim Jenness  <timj@jach.hawaii.edu>

	* t/text.t: Add proper test

1999-05-18  Tim Jenness  <timj@jach.hawaii.edu>
	
	* Release V0.10
	